--- a/package.json
+++ b/package.json
@@ -18,17 +18,16 @@
   },
   "homepage": "https://github.com/SumunComunicacionGlobal/epic-lifts#readme",
   "devDependencies": {
-    "@wordpress/scripts": "^19.2.4",
-    "dir-archiver": "^1.1.1",
-    "node-sass": "^9.0.0",
-    "uglify-js": "^3.16.1"
+    "@wordpress/stylelint-config": "^23.1.0",
+    "dir-archiver": "^2.1.0",
+    "sass": "^1.79.4",
+    "stylelint": "^16.9.0",
+    "uglify-js": "^3.19.0"
   },
   "scripts": {
-    "watch": "node-sass sass/ -o ./ --source-map true --output-style compressed --indent-type tab --indent-width 1 -w",
-    "compile:css": "node-sass sass/ -o ./ && stylelint '*.css' --fix || true && stylelint '*.css' --fix",
+    "watch": "sass --watch sass:./ --no-source-map --style compressed",
+    "compile:css": "sass sass:./ && stylelint '*.css' --fix || true && stylelint '*.css' --fix",
     "compile:js": "uglifyjs assets/js/*.js > assets/js/epic-lifts.min.js",
-    "lint:scss": "wp-scripts lint-style 'sass/**/*.scss'",
-    "lint:js": "wp-scripts lint-js 'assets/js/*.js'",
     "bundle": "dir-archiver --src . --dest ../epic-lifts.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map yarn.lock",
     "sync": "browser-sync start --proxy 'http://localhost:8888/epic-lifts/' --files ['**/*.php', '*.*']",
     "dev": "npm run watch & npm run sync"
