--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "compile:css": "sass sass:./ && stylelint '*.css' --fix || true && stylelint '*.css' --fix",
     "compile:js": "uglifyjs assets/js/*.js > assets/js/epic-lifts.min.js",
     "bundle": "dir-archiver --src . --dest ../epic-lifts.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map yarn.lock",
-    "sync": "browser-sync start --proxy 'http://localhost:8888/epic-lifts/' --files ['**/*.php', '*.*']",
+    "sync": "browser-sync start --proxy 'http://localhost/epic-lift/' --files ['**/*.php', '*.*']",
     "dev": "npm run watch & npm run sync"
   }
 }
